<resources>
    <string name="app_name">Zgadywacz</string>
    <string name="menu_logout_button">Wyloguj</string>
    <string name="login_button">Zaloguj się</string>
    <string name="login_signup_button">Utwórz konto</string>
    <string name="signup_button">Zarejestruj mnie!</string>
    <string name="login_nick_hint">nick</string>
    <string name="login_password_hint">hasło</string>
    <string name="signup_nick_EditText">nick</string>
    <string name="signup_email_EditText">e-mail</string>
    <string name="signup_passw_EditText">hasło</string>
    <string name="signup_passw_confirm_EditText">powtórz hasło</string>
    <string name="signup_actionbar_title">Rejestracja</string>
    <string name="login_actionbar_title">Zaloguj się aby grać</string>
    <string name="ranking_actionbar_title">Ranking</string>
    <string name="menu_username">nazwa użytkownika</string>
    <string name="menu_logged_username_begining">Zalogowano jako</string>
    <string name="menu_play_button">Graj</string>
    <string name="menu_ranking_button">Ranking</string>
    <string name="menu_rateme_button">Oceń grę</string>
    <string name="menu_credits_button">Info</string>
    <string name="menu_logged_out">Wylogowano.</string>
    <string name="title_activity_initialize">Inicjalizacja...</string>
    <string name="action_settings">Ustawienia</string>
    <string name="warning_template">Koniecznie popraw: </string>
    <string name="warning_nickLenghtmin">\n-min. dł. nick\'u to 3 </string>
    <string name="warning_nickLenghtmax">\n-max. dł. nick\'u to 20 </string>
    <string name="warning_nickSpace">\n-nick nie jest jednym wyrazem </string>
    <string name="warning_mailLenghtmin">\n-min dł. mail\'a to 6 </string>
    <string name="warning_emailSpace">\n-email zawiera spację </string>
    <string name="warning_emailAt">\n-email nie ma @ </string>
    <string name="warning_passwConfWrong">\n-hasła nie są identyczne </string>
    <string name="warning_passwLengthmin">\n-min dł. hasła to 5 </string>
    <string name="warning_nickBegin">\n-pierwszy znak nick\'u nie jest literą </string>
    <string name="warning_emailBegin">\n-pierwszy znak mail\'a nie jest literą </string>
    <string name="warning_passwBegin">\n-pierwszy znak hasła nie jest literą </string>
    <string name="warning_nickEmpty">\n-nick jest pusty </string>
    <string name="warning_emailEmpty">\n-mail jest pusty </string>
    <string name="warning_passwEmpty">\n-hasło jest puste </string>
    <string name="signedUpSuccess">Zarejestrowano!\nWiadomość z linkiem potwierdzającym została wysłana na twoją skrzynkę mailową.</string>
    <string name="title_activity_credits">Info</string>
    <string name="credits_header_tittle">INFO</string>
    <string name="login_rememberme_checkbox">Zapamiętaj</string>
    <string name="login_forgot_password_textview"><u>Resetuj hasło</u></string>
    <string name="connecting_text">Łączę...</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="play_upgrade_button">Ulepszaj</string>
    <string name="play_create_button">Twórz</string>
    <string name="play_guess_button">Zgaduj</string>
    <string name="title_activity_guess">GuessActivity</string>
    <string name="bottombar_guess_settings">Zmień...</string>
    <string name="guess_start_button"><u>Dotknij aby rozpocząć!</u> </string>
    <string name="keyboard_button1">Q</string>
    <string name="keyboard_button2">W</string>
    <string name="keyboard_button3">E</string>
    <string name="keyboard_button4">Ę</string>
    <string name="keyboard_button5">R</string>
    <string name="keyboard_button6">T</string>
    <string name="keyboard_button7">Y</string>
    <string name="keyboard_button8">U</string>
    <string name="keyboard_button9">I</string>
    <string name="keyboard_button10">O</string>
    <string name="keyboard_button11">Ó</string>
    <string name="keyboard_button12">P</string>
    <string name="keyboard_button13">A</string>
    <string name="keyboard_button14">Ą</string>
    <string name="keyboard_button15">S</string>
    <string name="keyboard_button16">Ś</string>
    <string name="keyboard_button17">D</string>
    <string name="keyboard_button18">F</string>
    <string name="keyboard_button19">G</string>
    <string name="keyboard_button20">H</string>
    <string name="keyboard_button21">J</string>
    <string name="keyboard_button22">K</string>
    <string name="keyboard_button23">L</string>
    <string name="keyboard_button24">Ł</string>
    <string name="keyboard_button25">Z</string>
    <string name="keyboard_button26">Ź</string>
    <string name="keyboard_button27">Ż</string>
    <string name="keyboard_button28">X</string>
    <string name="keyboard_button29">C</string>
    <string name="keyboard_button30">Ć</string>
    <string name="keyboard_button31">V</string>
    <string name="keyboard_button32">B</string>
    <string name="keyboard_button33">N</string>
    <string name="keyboard_button34">Ń</string>
    <string name="keyboard_button35">M</string>
    <string name="keyboard_button36"><![CDATA[<-]]></string>
    <string name="settings_from_android_wtype">z bazy słów</string>
    <string name="settings_from_users_wtype">od graczy</string>
    <string name="end_popup_youwin">Wygrałeś!</string>
    <string name="end_popup_youloss">Przegrałeś :(</string>
    <string name="end_popup_correct">Poprawnie:</string>
    <string name="end_popup_incorrect">Niepoprawnie:</string>
    <string name="end_popup_winbonus">Bonus za wygraną:</string>
    <string name="end_popup_sum">SUMA:</string>
    <string name="end_popup_playagain">Graj dalej...</string>
    <string name="end_popup_settings">Ustawienia</string>
    <string name="end_popup_mainmenu">Menu</string>
    <string name="no_more_words_toast">Koniec słów o tej długości...\nZmień długość słowa lub kategorię!</string>
    <string name="per_letter_string_actionbar">s/na literę</string>
    <string name="max_length_for_this_level">To max dł. słowa dla Twojego poziomu.\nZwiększ poziom aby grać o więcej!</string>
    <string name="confirm_aborting">You will lose that way!\nTap again to confirm</string>
    <string name="abort_guessing_quest">Przerwać na pewno?</string>
    <string name="aborting_information">( To wiąże się z przegraną! )</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="title_activity_upgrade">UpgradeActivity</string>
    <string name="upgrade_tries">PRÓBY</string>
    <string name="upgrade_time">CZAS</string>
    <string name="upgrade_letters">LITERY</string>
    <string name="upgrade_level">POZIOM</string>
    <string name="letter">literę</string>
    <string name="letters">litera(y)</string>
    <string name="level">"Lvl:"</string>
    <string name="own_words">S:</string>
    <string name="max_length">D:</string>
    <string name="max_level_achieved_warning">Osiągnąłeś poziom maksymalny!</string>
    <string name="get_upgrade_button">ULEPSZ</string>
    <string name="upgrade_not_enough_money">Brak środków.\nStan konta:</string>
    <string name="upgrade_game_level_too_low">Poziom gry za niski\nTwój poziom:</string>
    <string name="upgrade_popup_time">Czas</string>
    <string name="upgrade_popup_level_small">poziom</string>
    <string name="upgrade_popup_cost">Koszt: -</string>
    <string name="upgrade_popup_min_game_level">Min poziom gry:</string>
    <string name="upgrade_popup_time_p_letter">Czas na literę:</string>
    <string name="upgrade_popup_tries_per_letter">Prób na literę:</string>
    <string name="upgrade_popup_tries_tittle">Próby</string>
    <string name="upgrade_popup_start_letters_title">Litery początkowe</string>
    <string name="upgrade_popup_letters_on_beginning">Liter na start:</string>
    <string name="upgrade_popup_game_level_tittle">Poziom Gry</string>
    <string name="upgrade_popup_max_word_lenth">Max dł słowa:</string>
    <string name="upgrade_popup_max_own_words">Max ilość słów:</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="create_own_word_not_4_lvl">Poziom gry zbyt niski.\nMin poziom aby tworzyć własne słowa to: 4</string>
    <string name="after_upgrade_text">Ulepszono</string>
    <string name="end_game_popup_tries_bonus">Bonus za pozostałe próby:</string>
    <string name="create_draw_out_button">Wypłać</string>
    <string name="create_add_word_button">Dodaj słowo</string>
    <string name="create_your_words_list">Dodane słowa:</string>
    <string name="create_incomes">Wpływy:</string>
    <string name="title_activity_add_word">AddWordActivity</string>
    <string name="add_word_cancel_button">Anuluj</string>
    <string name="add_word_commit_button">Publikuj</string>
    <string name="add_word_max_length_for_your_level">To już max dł. dla Twojego poziomu</string>
    <string name="add_word_checking_in_progress">Trwa sprawdzanie słowa...</string>
    <string name="add_word_too_short">Twoje słowo jest zbyt krótkie\nMin długość: 3</string>
    <string name="add_word_sended_to_confirm">Twoje słowo jest na liście oczekującej.\nPo pomyślnej weryfikacji trafi na listę główną-zostaw dla niego miejsce</string>
    <string name="add_word_addition_success">Pomyślnie opublikowano słowo</string>
    <string name="create_word_list_connection_problem">Problem z połączeniem...</string>
    <string name="add_word_you_achieved_limit">Osiągnąłeś limit własnych słów dla aktualnego poziomu.</string>
    <string name="on_draw_out">Wszystkie środki wypłacono na konto główne.</string>
    <string name="create_length_limit">"Max długość: "</string>
    <string name="create_words_limit">"Max ilość: "</string>
    <string name="create_words_number">"Aktualna ilość: "</string>
    <string name="add_word_achieved_limit">Osiągnąłeś limit własnych słów dla aktualnego poziomu.</string>
    <string name="add_word_delete_soon">Słowo zostanie wkrótce usunięte.</string>
    <string name="email_not_confirmed">Nie potwierdzono adresu mail\'owego!</string>
    <string name="invalid_login_parameters">Niepoprawny login lub hasło</string>
    <string name="connection_problems">Problem z połączeniem</string>
    <string name="unknown_error">Błąd.\nSpróbuj ponownie.</string>
    <string name="usernale_already_taken">Nazwa użytkownika już zajęta</string>
    <string name="email_already_taken">Adres email już zajęty</string>
    <string name="email_invalid">Niepoprawny adres email</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="reset_email_hint">wpisz swój adres email</string>
    <string name="reset_button">Resetuj hasło</string>
    <string name="reset_wait_layout_textview">Czekaj...</string>
    <string name="reset_succes_information">Wiadomość z dalszą instrukcją została wysłana na Twojego mail\'a</string>
    <string name="reset_activity_actionbar_tittle">Resetowanie hasła</string>
    <string name="popup_settings_tittle">Ustawienia</string>
    <string name="popup_settings_victory">Wygrana:</string>
    <string name="popup_settings_loss">Przegrana:</string>
    <string name="popup_settings_word_length">Długość słowa:</string>
    <string name="popup_settings_word_type">Typ słowa:</string>
    <string name="create_own_word_record_casualties">Zdobyte porażki:</string>
    <string name="app_first_activity_name">Zgadywacz</string>
    <string name="on_rate_me_googleplay_error">Nie można otworzyć Google Play.\nZainstaluj aplikację i spróbuj jeszcze raz.</string>
    <string name="listview_progress_info_text">Postęp:</string>
    <string name="listview_ownwords_info_text">Wł. słowa:</string>
    <string name="mainmenu_actionbar_logout_text">Wyloguj</string>
    <string name="guess_loading_text">Szukam słowa...</string>
    <string name="actionBarException">Nie można ukryć paska powiadomień.Aplikajca może działać niepoprawnie.</string>
    <string name="db_initialization_error">Błąd inicjalizacji bazy słów. Aplikacja nie będzie działać poprawnie.</string>
</resources>