<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TableRow>

        <Button
            android:id="@+id/K1"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button1"/>

        <Button
            android:id="@+id/K2"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button2"/>
        <Button
            android:id="@+id/K3"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button3"/>
        <Button
            android:id="@+id/K4"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button4"/>
        <Button
            android:id="@+id/K5"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button5"/>
        <Button
            android:id="@+id/K6"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button6"/>
        <Button
            android:id="@+id/K7"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button7"/>
        <Button
            android:id="@+id/K8"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button8"/>
        <Button
            android:id="@+id/K9"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button9"/>
        <Button
            android:id="@+id/K10"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button10"/>
        <Button
            android:id="@+id/K11"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button11"/>
        <Button
            android:id="@+id/K12"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button12"/>


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/K13"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button13"/>

        <Button
            android:id="@+id/K14"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button14"/>
        <Button
            android:id="@+id/K15"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button15"/>
        <Button
            android:id="@+id/K16"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button16"/>
        <Button
            android:id="@+id/K17"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button17"/>
        <Button
            android:id="@+id/K18"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button18"/>
        <Button
            android:id="@+id/K19"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button19"/>
        <Button
            android:id="@+id/K20"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button20"/>
        <Button
            android:id="@+id/K21"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button21"/>
        <Button
            android:id="@+id/K22"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button22"/>
        <Button
            android:id="@+id/K23"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button23"/>
        <Button
            android:id="@+id/K24"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button24"/>


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/K25"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button25"/>

        <Button
            android:id="@+id/K26"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button26"/>
        <Button
            android:id="@+id/K27"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button27"/>
        <Button
            android:id="@+id/K28"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button28"/>
        <Button
            android:id="@+id/K29"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button29"/>
        <Button
            android:id="@+id/K30"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button30"/>
        <Button
            android:id="@+id/K31"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button31"/>
        <Button
            android:id="@+id/K32"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button32"/>
        <Button
            android:id="@+id/K33"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button33"/>
        <Button
            android:id="@+id/K34"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button34"/>
        <Button
            android:id="@+id/K35"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button35"/>
        <Button
            android:id="@+id/K36"
            android:layout_weight="1"
            android:minHeight="@dimen/keyboardkey_size"
            android:minWidth="@dimen/keyboardkey_size"
            android:layout_margin="@dimen/keyboardkey_margin"
            style="@style/myButton"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onKeyboardButton"
            android:text="@string/keyboard_button36"/>



    </TableRow>

</TableLayout>