<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionBarBack">

    <LinearLayout
        android:background="@color/actionBarBack"
        android:padding="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/abort_guessing_quest"/>

    <TextView
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:text="@string/aborting_information"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">
    <TextView
        android:id="@+id/abort_yes_button"
        android:padding="5dp"
        android:textColor="@color/red"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/yes"
        android:layout_weight="1"/>
        <TextView
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    <TextView
        android:id="@+id/abort_no_button"
        android:padding="5dp"
        android:gravity="right"
        android:textColor="@color/green"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/no"
        android:layout_weight="1"/>
    </LinearLayout>

    </LinearLayout>

</LinearLayout>